# beet_discord

./: .env.example  .gitignore  Cargo.toml  README.md
.beet/agent/: system_prompt.md
.zed/: settings.json
examples/: chatbot.rs  http_api.rs
examples/command_demo/: greet_state.rs  mod.rs
examples/misc/: greet_on_wake.rs  respond_oneshot.rs
src/: lib.rs
src/beet_action/: http_actions.rs  mod.rs
src/beet_thread/: discord_meta.rs  mod.rs  thread_sync.rs  thread_utils.rs
src/discord_io/: gateway.rs  gateway_listener.rs  http.rs
src/discord_types/: discord_query.rs  events.rs  mod.rs
src/types/: bot.rs  bot_state.rs  channel_map.rs  discord_plugin.rs  mod.rs
